2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/cpio.c (grub_cpio_dir): Fix a bug with multiple listing.
	Explicitly init restart while on it.

2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/posix_wrap/wchar.h (mbrtowc): Set pwc to zero to avoid
	uninited variable.

2012-02-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mknetdir.in: Use . rather than source for POSIX
	compatibility.

2012-02-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-probe.c (main): Fix trailing space in compatibility hint.

2012-02-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/partition.c (grub_partition_get_name): Fix uninited
	variable.

2012-02-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/hdparm.c (grub_cmd_hdparm): Accept device name
	without quotes.

2012-02-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/net.c (GRUB_MOD_INIT): Don't register netfs.

2012-02-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/partition.c (grub_partition_get_name): Fix reverse
	iteration of partitions.

2012-02-08  Vladimir Serbinenko  <phcoder@gmail.com>

	Improve gettext support. Stylistic fixes and error handling fixes while
	on it.

2012-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/i386/relocator16.S: Revert moving A20 code into PM
	part. Instead setup the correct stack in RM.
	* grub-core/lib/i386/relocator.c (grub_relocator16_boot): Reserve place
	for stack.
	* include/grub/i386/relocator_private.h: New file.

2012-02-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/minicmd.c (GRUB_MOD_INIT): Add missing SIZE
	argument.
	* util/grub-fstest.c (options): Add missing DEVICE part.

2012-02-05  Vladimir Serbinenko  <phcoder@gmail.com>

	Clarify and unify messages.

	* grub-core/commands/hashsum.c (options): Unify messages.
	* grub-core/commands/keystatus.c (GRUB_MOD_INIT): Don't mark a
	literal-only message as translatable.